--- a/style.css
+++ b/style.css
@@ -24,25 +24,68 @@ header img{
     font-size: 35px;
     color: white;
 }
-.text{
-    display: flex;
+
+.nav{
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: auto;
+    height: auto;
+
 }
-nav{
-    padding: auto;
-    background-color: #C59750;
-    width: 30%;
+.links{
+    background-color: #c59658;
     text-align: center;
+
+
 }
-
-
-nav a{
-    padding: 25px;
+.links a{
     text-decoration: none;
     color: black;
     font-size: 25px;
 }
-.text{
-    background-color: #be873f;
-    width: 100%;
-    height: 560px;
+.links li{
+    padding: 1em;
 }
+.text{
+    background-color: #f5c381;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(20px, auto);
+    height: auto;
+    justify-items: center;
+}
+.text div{
+    padding: 4em;
+}
+
+.text{
+    text-align: center;
+}
+.text h2{
+    color: rgb(158, 158, 158);
+}
+footer{
+    background-color: black;
+    height: 150px;
+}
+.pie-pagina{
+    display: flex;
+    height: 100px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: flex-end;
+
+
+}
+.grupo2 img{
+    width: 68px;
+    margin: 10px;
+}
+.grupo2 img:hover{
+    transform: scale(1.2);
+}
+.grupo1 img{
+    width: 250px;
+
+}
+
